index.css
/* ... */
.service:nth-child(even)::after {
    background-color: #2A2A2A;
}

.service>i {
    font-size: var(--service_Icons-size);
}

.service>p {
    font-size: var(--p_big-font-Size);
    text-align: center;
}

.service::after {
    content: '';
    position: absolute;
    background-color: var(--color_Theme-1);
    bottom: 0;
    width: 100%;
    height: 1rem;
    transition: transform 500ms ease;
    transform: translateX(-100%);
}

.service:hover {
    transform: scale(1.05);
}

.service:hover::after {
    transform: translateX(0);
}
/* Foraneo */
#foraneo {
    background-color: var(--color_Theme-2);
    color: white;
}

/* Generic */
.text-center {
    text-align: center;
}
.sml-icon {
    max-width: 2.5rem;
}
.smallest-w-icon {
    max-width: 1rem;
    object-fit: contain;
}
.flex {
    display: flex;
}
.justify-center {
    justify-content: center;
} 
.place-items-center {
    place-items: center;
}
.gap-2 {
    gap: 2rem;
}
/* Extra small devices (phones, 340px and down) */

@media only screen and (max-width: 600px) {
    :root {
            --h1_font-Size: 2.4rem;
            --h2_font-Size: 2.3rem;
            --h3_font-Size: 1.8rem;
            --p_big-font-Size: 1.4rem;
            --main_content-big-fontSize: 3.2rem;
            --main_content-small-fontSize: 1.6rem;
            --service_Icons-size: 6rem;
            --main_content-button-fontSize:1.5rem;
        }
    .main-content h1 {
        text-align: start;
    }
}
/* Extra small */
@media only screen and (max-width: 340px) {
    :root {
        --h1_font-Size: 2.2rem;
        --h2_font-Size: 2.2rem;
        --h3_font-Size: 1.9rem;
        --p_big-font-Size: 1.7rem;
        --main_content-big-fontSize: 2.2rem;
        --main_content-small-fontSize: 1.7rem;
        --service_Icons-size: 5rem;
        --main_content-button-fontSize: 1.5rem;
    }
    .main-content {
        text-align: start;
        align-items: start;
    }

}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (max-width: 768px) {
    header > .navbar {
            min-height: 100vh;
            position: fixed;
            top: 0;
            right: 0;
            display: flex;
            width: 50%;
            max-width: 250px;
            z-index: 999;
            pointer-events: none;
            transform: translateX(100%);
            transition: transform 500ms ease;
            background-color: black;
            opacity: 0;
            pointer-events: none;
            z-index: 999;
        }
        .bars-menu-btn {
            display: block;
        }
        header > .navbar.open {
            transform: translateX(0);
            pointer-events: all;
        }
        .navbar > #navigation {
            flex-direction: column;
            margin: auto;
            height: 100vh;
            max-height: 80vh;
            z-index: 350;
        }
        .modal {
            display: none;
            pointer-events: none;
            width: 100vw;
            height: 100vh;
            background-color: rgba(0, 0, 0, 0.5);
            position: absolute;
            left: 0;
            top: 0;
            z-index: 200;
        }
        .modal.open {
            display: block;
            pointer-events: all;
        }
        .service-content-wrapper {
            flex-direction: column;
            max-width: 90%;
        }
        .main {
            width: 100%;
        }
        .main-content {
            margin-left: 0;
            flex-direction: column;
            align-items: start;
        }
        .close-menu-btn {
            position: absolute;
            display: block;
            right: min(3rem, 3vw);
            top: min(8rem, 7vh);
            height: 20px;
            object-fit: cover;
        }
        .grid-wrapper {
            grid-template-columns: 1fr;
        }
        /* Header submenu */
        #transportes > .subnavigation-wrapper {
            display: grid;
            grid-template-rows: 0fr;
            padding: 0;
            margin: 0;
            transition: grid 100ms linear, opacity 100ms linear;
            opacity: 0;
        }

        #transportes>.subnavigation-wrapper.open {
            grid-template-rows: 1fr;
            pointer-events: all;
            opacity: 1;
        }

        #transportes>.subnavigation-wrapper > ul {
            overflow: hidden;
        }
        .navbar.open {
            opacity: 1 !important;
            transform: translate(0) !important;
            pointer-events: all;
        }
}


/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
:root {
        --h1_font-Size: 5rem;
        --h2_font-Size: 3.4rem;
        --h3_font-Size: 2.6rem;
        --p_big-font-Size: 2.2rem;
        --main_content-big-fontSize: 5rem;
        --main_content-small-fontSize: 3rem;
        --main_content-button-fontSize: 3rem;
        --service_Icons-size: 10rem;
    }
    .main-content{
        text-align: start;
    }


    .main-content span {
        font-size: var(--main_content-small-fontSize);
        color: white;
        margin-bottom: 3.5rem;
    }
}

